[package]
name = "dusty-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
slack-morphism = { version = "2.5.0", features = ["axum"] }
axum = "0.7.7"
hyper = "1.5.0"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.132"
tracing = "0.1.40"
http-body-util = "0.1.2"
bytes = "1.8.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.91"
regex = "1.11.1"